# NexusLIMS

./: .buildinfo  .coveragerc  .env.example  .gitignore  .gitlab-ci.yml  .python-version  Pipfile  README.md  README.rst  api.html  changelog.html  customizing_cdcs.html  data_security.html  database.html  development.html  development_log.html  genindex.html  gitlab_project_backup.sh  index.html  nexus-experiment.xsd.html  objects.inv  process_new_records.sh  py-modindex.html  pyproject.toml  record_building.html  run_tests.sh  schema_documentation.html  search.html  searchindex.js  session_logger_app.html  taxonomy.html
.doctrees/: api.doctree  changelog.doctree  customizing_cdcs.doctree  data_security.doctree  database.doctree  development.doctree  development_log.doctree  index.doctree  record_building.doctree  schema_documentation.doctree  session_logger_app.doctree  taxonomy.doctree
.doctrees/api/: nexusLIMS.builder.doctree  nexusLIMS.db.doctree  nexusLIMS.doctree  nexusLIMS.extractors.doctree  nexusLIMS.harvester.doctree  nexusLIMS.harvesters.doctree  nexusLIMS.harvesters.nemo.doctree  nexusLIMS.schemas.doctree
4ceed-extractors/: Dockerfile  extractor-start.sh  requirements.txt
4ceed-extractors/src/: basic_extractor.py  basic_extractor_config.py  basic_extractor_helper.py  extractor_info.json  extractors.py
ELNExperiments/: AutomaticAuth_ELNImport.ipynb
_modules/: index.html  pathlib.html
_modules/nexusLIMS/: cdcs.html  db.html  extractors.html  harvesters.html  instruments.html  utils.html
_modules/nexusLIMS/builder/: record_builder.html
_modules/nexusLIMS/db/: migrate_db.html  session_handler.html
_modules/nexusLIMS/extractors/: basic_metadata.html  digital_micrograph.html  edax.html  fei_emi.html  quanta_tif.html  thumbnail_generator.html
_modules/nexusLIMS/harvester/: sharepoint_calendar.html
_modules/nexusLIMS/harvesters/: nemo.html  reservation_event.html  sharepoint_calendar.html
_modules/nexusLIMS/harvesters/nemo/: connector.html  exceptions.html  utils.html
_modules/nexusLIMS/schemas/: activity.html
_sources/: api.rst.txt  customizing_cdcs.rst.txt  data_security.rst.txt  development.rst.txt  development_log.rst.txt  record_building.rst.txt  schema_documentation.rst.txt  session_logger_app.rst.txt  taxonomy.rst.txt
_sources/api/: nexusLIMS.builder.rst.txt  nexusLIMS.db.rst.txt  nexusLIMS.extractors.rst.txt  nexusLIMS.harvester.rst.txt  nexusLIMS.harvesters.nemo.rst.txt  nexusLIMS.rst.txt  nexusLIMS.schemas.rst.txt
_static/: bootstrap-sphinx.css  custom-styles.css  merge history.ods
api/: nexusLIMS.builder.html  nexusLIMS.db.html  nexusLIMS.extractors.html  nexusLIMS.harvester.html  nexusLIMS.harvesters.html  nexusLIMS.harvesters.nemo.html  nexusLIMS.html  nexusLIMS.schemas.html
docs/: README.rst  build_plantuml.sh  changelog.rst  conf.py  customizing_cdcs.rst  database.rst  development.rst  development_log.rst  index.rst  objects_lxml.inv  pytz_objects.inv  record_building.rst  session_logger_app.rst
docs/_static/: custom-styles.css
docs/_templates/: layout.html  localtoc.html  relations.html  sourcelink.html
docs/api/: nexusLIMS.db.rst  nexusLIMS.extractors.rst  nexusLIMS.harvesters.rst  nexusLIMS.schemas.rst
docs/changes/: 126.bugfix.rst  128.feature.rst  131.bugfix.rst  README.rst
docs/diagrams/: record_building.plantuml
early_hyperspy/: 1_data_2_hdf5.py  2_hdf5_2_txt.py  3_metadata_interest.py  readme.txt
mdcs/etc/: README.md  schemaLocation.txt  schemaLocation4nix.txt  schemaLocation4windows.txt  validate  validate.cmd
mdcs/examples/: prototype.xml
mdcs/nexusLIMS/: MANIFEST.in  cal_parser.xsl  credentials.ini.example  requirements.txt  sepCalEvents.py  setup.py  writeCalEvents.py
mdcs/nexusLIMS/doc/source/: README.rst  api.rst  conf.py  customizing_cdcs.rst  data_security.rst  database.rst  development.rst  index.rst  objects_lxml.inv  record_building.rst  schema_documentation.rst  session_logger_app.rst  taxonomy.rst
mdcs/nexusLIMS/extractors/: quanta_tif.py
mdcs/nexusLIMS/nexusLIMS/: __init__.py  _calendar_root_url.py  _urls.py  cdcs.py  instruments.py  utils.py  version.py
mdcs/nexusLIMS/nexusLIMS/builder/: cal_events_to_nx_record.xsl  record_builder.py
mdcs/nexusLIMS/nexusLIMS/cal_harvesting/: sharepoint_calendar.py
mdcs/nexusLIMS/nexusLIMS/db/: NexusLIMS_db_creation_script.sql  __init__.py  db_logger_gui.py  db_logger_gui.spec  (+8 more)
mdcs/nexusLIMS/schemas/: nexus-experiment.xsd
mdcs/nexusLIMS/tests/: __init__.py  pytest.ini  test_calendar_handling.py  test_metadata_extractors.py
mdcs/schemas/: nexus-experiment.xsd
mdcs/scripts/: ELNRecordGenerator.py  cal_parser.xsl  sepCalEvents.py  writeCalEvents.py
nexusLIMS/: __init__.py  _urls.py  cdcs.py  instruments.py  utils.py  version.py
nexusLIMS/builder/: __init__.py  record_builder.py
nexusLIMS/db/: session_handler.py
nexusLIMS/db/dev/: NexusLIMS_db_creation_script.sql  migrate_db.py
nexusLIMS/dev_scripts/: get_file_sizes.py  process_merge_requests.py  update_xslt_files.py  xslt_transform.py
nexusLIMS/extractors/: __init__.py  basic_metadata.py  digital_micrograph.py  edax.py  fei_emi.py  quanta_tif.py  thumbnail_generator.py  utils.py
nexusLIMS/harvesters/: __init__.py  nemo.py  reservation_event.py  sharepoint_calendar.py
nexusLIMS/harvesters/nemo/: __init__.py  connector.py  exceptions.py  utils.py
nexusLIMS/schemas/: __init__.py  activity.py  nexus-experiment.xsd
scripts/: apply_xslt.sh  duplicate_folder_structure.py
tests/: .coveragerc  __init__.py  conftest.py  pytest.ini  test_cdcs.py  test_extractors.py  test_harvesters.py  test_instruments.py  test_records.py  test_sessions.py  test_utils.py  test_version.py  utils.py
tests/files/: 647_leo_edax_test.msa  647_leo_edax_test.spc  basic_test.txt  basic_test_no_extension  text_preview_jeol_ansi.txt  text_preview_test_data.txt  text_preview_test_paragraph.txt
xsl/: cdcs_record.xsl  cdcs_stylesheet.xsl  cdcs_stylesheet_list.xsl  stylesheet-JS.js  stylesheet_adjusted_record_builder.xsl  xslStylesheet.xsl
xsl/old/: nexus.html
xsltdev/: nexus.xml  nexus.xsl
(+52 files in other folders)
